--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="dehradun, explore, uttarakhand, trekking" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>ExpDoon</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
